ANTLR_GramaticaLL1/generated/CalculadoraParser.py
# Generated from Calculadora.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CalculadoraParser ( Parser ):

    grammarFileName = "Calculadora.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'sin'", "'cos'", "'tan'", "'mod'", "'abs'", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'|'", "'='", "'('", "')'", "';'" ]

    symbolicNames = [ "<INVALID>", "SIN", "COS", "TAN", "MOD", "ABS", "ID", 
                      "NUM", "MAS", "MENOS", "POR", "DIV", "PORCENTAJE", 
                      "BARRA", "ASIGNAR", "PAR_IZQ", "PAR_DER", "PUNTOYCOMA", 
                      "COMENTARIO", "ESPACIOS" ]

    RULE_inicio = 0
    RULE_programa = 1
    RULE_sentencia = 2
    RULE_expr = 3
    RULE_exprP = 4
    RULE_term = 5
    RULE_termP = 6
    RULE_factor = 7
    RULE_primario = 8
    RULE_func = 9

    ruleNames =  [ "inicio", "programa", "sentencia", "expr", "exprP", "term", 
                   "termP", "factor", "primario", "func" ]

    EOF = Token.EOF
    SIN=1
    COS=2
    TAN=3
    MOD=4
    ABS=5
    ID=6
    NUM=7
    MAS=8
    MENOS=9
    POR=10
    DIV=11
    PORCENTAJE=12
    BARRA=13
    ASIGNAR=14
    PAR_IZQ=15
    PAR_DER=16
    PUNTOYCOMA=17
    COMENTARIO=18
    ESPACIOS=19

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class InicioContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programa(self):
            return self.getTypedRuleContext(CalculadoraParser.ProgramaContext,0)


        def EOF(self):
            return self.getToken(CalculadoraParser.EOF, 0)

        def getRuleIndex(self):
            return CalculadoraParser.RULE_inicio

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInicio" ):
                return visitor.visitInicio(self)
            else:
                return visitor.visitChildren(self)




    def inicio(self):

        localctx = CalculadoraParser.InicioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_inicio)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.programa()
            self.state = 21
            self.match(CalculadoraParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sentencia(self):
            return self.getTypedRuleContext(CalculadoraParser.SentenciaContext,0)


        def programa(self):
            return self.getTypedRuleContext(CalculadoraParser.ProgramaContext,0)


        def getRuleIndex(self):
            return CalculadoraParser.RULE_programa

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = CalculadoraParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programa)
        try:
            self.state = 27
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 23
                self.sentencia()
                self.state = 24
                self.programa()
                pass
            elif token in [-1]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CalculadoraParser.ID, 0)

        def ASIGNAR(self):
            return self.getToken(CalculadoraParser.ASIGNAR, 0)

        def expr(self):
            return self.getTypedRuleContext(CalculadoraParser.ExprContext,0)


        def PUNTOYCOMA(self):
            return self.getToken(CalculadoraParser.PUNTOYCOMA, 0)

        def getRuleIndex(self):
            return CalculadoraParser.RULE_sentencia

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia" ):
                return visitor.visitSentencia(self)
            else:
                return visitor.visitChildren(self)




    def sentencia(self):

        localctx = CalculadoraParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_sentencia)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self.match(CalculadoraParser.ID)
            self.state = 30
            self.match(CalculadoraParser.ASIGNAR)
            self.state = 31
            self.expr()
            self.state = 32
            self.match(CalculadoraParser.PUNTOYCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self):
            return self.getTypedRuleContext(CalculadoraParser.TermContext,0)


        def exprP(self):
            return self.getTypedRuleContext(CalculadoraParser.ExprPContext,0)


        def getRuleIndex(self):
            return CalculadoraParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = CalculadoraParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.term()
            self.state = 35
            self.exprP()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprPContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAS(self):
            return self.getToken(CalculadoraParser.MAS, 0)

        def term(self):
            return self.getTypedRuleContext(CalculadoraParser.TermContext,0)


        def exprP(self):
            return self.getTypedRuleContext(CalculadoraParser.ExprPContext,0)


        def MENOS(self):
            return self.getToken(CalculadoraParser.MENOS, 0)

        def getRuleIndex(self):
            return CalculadoraParser.RULE_exprP

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprP" ):
                return visitor.visitExprP(self)
            else:
                return visitor.visitChildren(self)




    def exprP(self):

        localctx = CalculadoraParser.ExprPContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_exprP)
        try:
            self.state = 46
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.match(CalculadoraParser.MAS)
                self.state = 38
                self.term()
                self.state = 39
                self.exprP()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self.match(CalculadoraParser.MENOS)
                self.state = 42
                self.term()
                self.state = 43
                self.exprP()
                pass
            elif token in [13, 16, 17]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self):
            return self.getTypedRuleContext(CalculadoraParser.FactorContext,0)


        def termP(self):
            return self.getTypedRuleContext(CalculadoraParser.TermPContext,0)


        def getRuleIndex(self):
            return CalculadoraParser.RULE_term

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = CalculadoraParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_term)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.factor()
            self.state = 49
            self.termP()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermPContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POR(self):
            return self.getToken(CalculadoraParser.POR, 0)

        def factor(self):
            return self.getTypedRuleContext(CalculadoraParser.FactorContext,0)


        def termP(self):
            return self.getTypedRuleContext(CalculadoraParser.TermPContext,0)


        def DIV(self):
            return self.getToken(CalculadoraParser.DIV, 0)

        def MOD(self):
            return self.getToken(CalculadoraParser.MOD, 0)

        def PORCENTAJE(self):
            return self.getToken(CalculadoraParser.PORCENTAJE, 0)

        def getRuleIndex(self):
            return CalculadoraParser.RULE_termP

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTermP" ):
                return visitor.visitTermP(self)
            else:
                return visitor.visitChildren(self)




    def termP(self):

        localctx = CalculadoraParser.TermPContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_termP)
        try:
            self.state = 68
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.match(CalculadoraParser.POR)
                self.state = 52
                self.factor()
                self.state = 53
                self.termP()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.match(CalculadoraParser.DIV)
                self.state = 56
                self.factor()
                self.state = 57
                self.termP()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 59
                self.match(CalculadoraParser.MOD)
                self.state = 60
                self.factor()
                self.state = 61
                self.termP()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 4)
                self.state = 63
                self.match(CalculadoraParser.PORCENTAJE)
                self.state = 64
                self.factor()
                self.state = 65
                self.termP()
                pass
            elif token in [8, 9, 13, 16, 17]:
                self.enterOuterAlt(localctx, 5)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MENOS(self):
            return self.getToken(CalculadoraParser.MENOS, 0)

        def factor(self):
            return self.getTypedRuleContext(CalculadoraParser.FactorContext,0)


        def primario(self):
            return self.getTypedRuleContext(CalculadoraParser.PrimarioContext,0)


        def getRuleIndex(self):
            return CalculadoraParser.RULE_factor

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)




    def factor(self):

        localctx = CalculadoraParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_factor)
        try:
            self.state = 73
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.match(CalculadoraParser.MENOS)
                self.state = 71
                self.factor()
                pass
            elif token in [1, 2, 3, 5, 6, 7, 13, 15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.primario()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimarioContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(CalculadoraParser.NUM, 0)

        def ID(self):
            return self.getToken(CalculadoraParser.ID, 0)

        def PAR_IZQ(self):
            return self.getToken(CalculadoraParser.PAR_IZQ, 0)

        def expr(self):
            return self.getTypedRuleContext(CalculadoraParser.ExprContext,0)


        def PAR_DER(self):
            return self.getToken(CalculadoraParser.PAR_DER, 0)

        def BARRA(self, i:int=None):
            if i is None:
                return self.getTokens(CalculadoraParser.BARRA)
            else:
                return self.getToken(CalculadoraParser.BARRA, i)

        def func(self):
            return self.getTypedRuleContext(CalculadoraParser.FuncContext,0)


        def getRuleIndex(self):
            return CalculadoraParser.RULE_primario

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimario" ):
                return visitor.visitPrimario(self)
            else:
                return visitor.visitChildren(self)




    def primario(self):

        localctx = CalculadoraParser.PrimarioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_primario)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.match(CalculadoraParser.NUM)
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.match(CalculadoraParser.ID)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 3)
                self.state = 77
                self.match(CalculadoraParser.PAR_IZQ)
                self.state = 78
                self.expr()
                self.state = 79
                self.match(CalculadoraParser.PAR_DER)
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 4)
                self.state = 81
                self.match(CalculadoraParser.BARRA)
                self.state = 82
                self.expr()
                self.state = 83
                self.match(CalculadoraParser.BARRA)
                pass
            elif token in [1, 2, 3, 5]:
                self.enterOuterAlt(localctx, 5)
                self.state = 85
                self.func()
                self.state = 86
                self.match(CalculadoraParser.PAR_IZQ)
                self.state = 87
                self.expr()
                self.state = 88
                self.match(CalculadoraParser.PAR_DER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SIN(self):
            return self.getToken(CalculadoraParser.SIN, 0)

        def COS(self):
            return self.getToken(CalculadoraParser.COS, 0)

        def TAN(self):
            return self.getToken(CalculadoraParser.TAN, 0)

        def ABS(self):
            return self.getToken(CalculadoraParser.ABS, 0)

        def getRuleIndex(self):
            return CalculadoraParser.RULE_func

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc" ):
                return visitor.visitFunc(self)
            else:
                return visitor.visitChildren(self)




    def func(self):

        localctx = CalculadoraParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 46) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





